--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "jw-angular-pagination": "^1.2.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
